--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-web-stackdriver-middleware"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Alex Pearson <alex@alexpear.com>"]
 edition = "2018"
 license = "MIT"
@@ -15,6 +15,7 @@ maintenance = { status = "actively-developed" }
 
 [dependencies]
 futures = "0.3.4"
+lazy_static = "1.4.0"
 pin-project = "0.4.8"
 serde_json = "1"
 
